--- a/Tuan4_LeHuuVang_1911065701/Views/GioHang/DatHang.cshtml
+++ b/Tuan4_LeHuuVang_1911065701/Views/GioHang/DatHang.cshtml
@@ -1,30 +1,96 @@
 ﻿@model IEnumerable<Tuan4_LeHuuVang_1911065701.Models.GioHang>
-    @{
-        ViewBag.Title = "GioHang";
-        Layout = "~/Views/Shared/_Layout.cshtml";
-    }
 
-    <h2>Bạn đã đặt hàng thành công</h2>
-    <table class="table">
+@{
+    ViewBag.Title = "DatHang";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<h2>Đặt Hàng</h2>
+
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<table class="table">
+    <tr>
+        <th>@Html.DisplayNameFor(model => model.masach)</th>
+        <th>@Html.DisplayNameFor(model => model.tensach)</th>
+        <th>@Html.DisplayNameFor(model => model.hinh)</th>
+        <th>@Html.DisplayNameFor(model => model.giaban)</th>
+        <th>@Html.DisplayNameFor(model => model.isoluong)</th>
+        <th>@Html.DisplayNameFor(model => model.dthanhtien)</th>
+    </tr>
+    @foreach (var item in Model)
+    {
         <tr>
-            <th>@Html.DisplayNameFor(model => model.tensach)</th>
-            <th>@Html.DisplayNameFor(model => model.hinh)</th>
-            <th>@Html.DisplayNameFor(model => model.giaban)</th>
-            <th>@Html.DisplayNameFor(model => model.isoluong)</th>
+            <td> @Html.DisplayFor(modelItem => item.masach) </td>
+            <td> @Html.DisplayFor(modelItem => item.tensach) </td>
+            <td> <img src="@item.hinh" width="200" /></td>
+            @using (Html.BeginForm("CapNhatGioHang", "GioHang", new { @id = item.masach }))
+            {
+                <td>@string.Format("{0:0,0}", item.giaban) VNĐ </td>
+                <td>@Html.DisplayFor(modelItem => item.isoluong)</td>
+                <td>@Html.DisplayFor(modelItem => item.dthanhtien)</td>
+
+            }
+        </tr>
+            
+    }
+    <tr style="font-weight: bold; text-align:left ; color: red">
+        <td colspan="2">Số Loại Sách: @ViewBag.Tongsoluongsanpham</td>
+        <td colspan="2">Số Lượng Sách: @ViewBag.Tongsoluong</td>
+        <td colspan="4">Tổng Tiền: @String.Format("{0:0,0}", @ViewBag.Tongtien) VNĐ </td>
+    </tr>   
+    <tr style="font-weight: bold; color: yellow; text-align:right">
+        <td colspan="6">
+            @Html.ActionLink("Trở về giỏ hàng", "DatHang", "GioHang")
+        </td>
+    </tr>
+</table>
+@using Tuan4_LeHuuVang_1911065701.Models
+<h2 Style ="text-align: center ">Thông Tin Đặt Hàng</h2>
+@{ 
+    KhachHang kh = (KhachHang)Session["TaiKhoan"];
+}
+<table align="center">
+    @using (Html.BeginForm())
+    {
+        @Html.ValidationSummary(true)
+        <tr style="height: 40px">
+            <td>Họ và tên khách hàng:</td>
+            <td style="font-weight :bold">@kh.hoten</td>
 
         </tr>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@Html.DisplayFor(modelItem => item.tensach)</td>
-                <td><img src="@item.hinh" width="180" /></td>
-                @using (Html.BeginForm("Capnhatgiohang", "Giohang", new { @id = item.masach }))
-                {
-                    <td>@String.Format("{0:0,0}", item.giaban) VND</td>
+        <tr style="height: 40px">
+            <td>Email: </td>
+            <td style="font-weight :bold">@kh.email</td>
 
-                    <td>@Html.DisplayFor(modelItem => item.isoluong)</td>
-                }
-            </tr>
-        }
- </table>
+        </tr>
+        <tr style="height: 40px">
+            <td>Địa chỉ: </td>
+            <td style="font-weight :bold">@kh.diachi</td>
+
+        </tr>
+        <tr style="height: 40px">
+            <td>Điện Thoại: </td>
+            <td style="font-weight :bold">@kh.dienthoai</td>
+
+        </tr>
+        <tr style="height: 40px">
+            <td>Ngày Đặt:</td>
+            <td style="font-weight :bold">@DateTime.Now.ToShortDateString()</td>
+
+        </tr>
+        <tr style="height: 40px">
+            <td>Ngày Giao: </td>   
+            <td style="font-weight :bold">
+            <input type="date" name="NgayGiao" />
+            </td>
+        </tr>
+        <tr style="height: 40px">
+            <td style="font-weight :bold">
+                <input type="submit" value="Xác Nhận" class="btn btn-success" />
+            </td>
+        </tr>
+    }
+</table>
 
