--- a/Tuan4_LeHuuVang_1911065701/Views/Sach/Detail.cshtml
+++ b/Tuan4_LeHuuVang_1911065701/Views/Sach/Detail.cshtml
@@ -32,7 +32,7 @@
         </dt>
 
         <dd>
-            <img src="@Html.DisplayFor(model => model.hinh)" alt="Alternate Text" />
+            <img src="@Html.DisplayFor(model => model.hinh)" alt="hinh sach" />
         </dd>
 
         <dt>
