--- a/Tuan4_LeHuuVang_1911065701/Views/Shared/_Layout.cshtml
+++ b/Tuan4_LeHuuVang_1911065701/Views/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
                     <li>@Html.ActionLink("Thể Loại", "Index", "Home")</li>
                     <li>@Html.ActionLink("Sách", "Index", "Home")</li>
                     <li>@Html.Partial("~/Views/GioHang/GioHangPartial.cshtml")</li>
+                    <li>@Html.ActionLink("Đăng Ký", "DangKy", "NguoiDung")</li>
+                    <li>@Html.ActionLink("Đăng Nhập", "DangNhap", "NguoiDung")</li>
+                    <li></li>
                 </ul>
             </div>
         </div>
