--- a/Tuan4_LeHuuVang_1911065701/Views/NguoiDung/DangNhap.cshtml
+++ b/Tuan4_LeHuuVang_1911065701/Views/NguoiDung/DangNhap.cshtml
@@ -35,27 +35,28 @@
 
             <form role="form">
                 <div class="form-group">
-                    <label for="inputUsernameEmail">Username or email</label>                
+                    <label for="inputUsernameEmail">Tài Khoản</label>                
                         @Html.EditorFor(model => model.tendangnhap, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.tendangnhap, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(model => model.tendangnhap, " ", new { @class = "text-danger" })
+                        @ViewBag.Thongbao
                 </div>
                 <div class="form-group">
-                    <a class="pull-right" href="#">Forgot password?</a>
-                    <label for="inputPassword">Password</label>
+                    <a class="pull-right" href="#">Quên Mật Khẩu?</a>
+                    <label for="inputPassword">Mật Khẩu</label>
                     @Html.EditorFor(model => model.matkhau, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.matkhau, "", new { @class = "text-danger" })
+                    @ViewBag.Thongbao
                 </div>
                     <div class="checkbox pull-right">
                         <label>
                             <input type="checkbox">
-                            Remember me
+                            Nhớ Mật Khẩu
                         </label>
                     </div>
                     <button type="submit" class="btn btn btn-primary">
-                        Log In
+                        Đăng Nhập
                     </button>
-</form>
-
+               </form>
         </div>
 
     </div>
